Fix main page style on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -232,7 +232,7 @@ h5 {
  * Markdown articles
  */
 .article p {
-  margin: 3em;
+  margin: 3em 0;
   line-height: 1.6em;
 }
 
